--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: fpure
 
 # Short bio or description (displayed in the header)
-description: fp pure
+description: FP pure | Welcome To My Blog!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/14192199
