--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: basecell
+name: Faputa
 
 # Short bio or description (displayed in the header)
-description: basecell | Welcome To My Blog!
+description: Faputa | Welcome To My Blog!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/14192199
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: basecell
+  github: Faputa
   instagram:
   linkedin:
   pinterest:
